--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.12",
+        "tanthammar/livewire-window-size": "*",
         "tcg/voyager": "^1.7"
     },
     "require-dev": {
